# opengl-project

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.sh  configure.sh  main.cpp  program.out  run.sh  test.cpp
include/camera/: Camera.hpp
include/filesystem/: Reader.hpp
include/glad/: glad.h
include/math/: Matrix.hpp  projections.hpp  rotations.hpp  utils.hpp
include/mesh/: Mesh.hpp  MeshBuilder.hpp  Vertex.hpp
include/model/: Model.hpp  ModelFactory.hpp
include/shader/: FragmentShader.hpp  Shader.hpp  ShaderFactory.hpp  ShaderProgram.hpp  VertexShader.hpp
include/structures/: FloatArray.hpp
include/testutils/: TempDir.hpp  TempTextFile.hpp
skillissue/: Makefile1.txt  README.md
skillissue/math/: Matrix.cpp  Matrix.hpp
skillissue/test/: Makefile  add.cpp  add.hpp  add_test.cpp  test_runner.cpp
src/: glad.cpp  main.cpp  main.cpp.orig
src/camera/: Camera.cpp
src/filesystem/: Reader.cpp  filesystem.cpp
src/glsl/light/: fragment.glsl  vertex.glsl
src/glsl/test/: fragment.glsl
src/glsl/wnormal/: fragment.glsl  vertex.glsl
src/math/: Matrix.cpp
src/model/: Model.cpp  ModelFactory.cpp
src/shader/: FragmentShader.cpp  ShaderFactory.cpp  ShaderProgram.cpp  VertexShader.cpp
src/structures/: FloatArray.cpp
src/testutils/: TempDir.cpp  TempTextFile.cpp
test/math/: Matrix_test.cpp
tests/filesystem/: Reader_test.cpp  filesystem_test.cpp
tests/math/: Matrix_test.cpp
